--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -732,6 +732,7 @@ Let $C$ be the sub-dataset of $D$ with a specific combination $\text{c\textunder
 
 \end{itemize}
 
+\newpage
 Before proceeding in the theoretical analysis of the algorithm here's the proposed pseudocode:
 
 \begin{algorithm}[H]
