--- a/sections/validation.tex
+++ b/sections/validation.tex
@@ -231,7 +231,7 @@ About these results is possible to make some considerations:
 \end{enumerate}
 
 For each fairness algorithm employed in the Fair-by-Design workflow, the minimum and maximum accuracy values are presented. This analysis provides insights into the range of accuracy outcomes associated with each fairness algorithm.
-In order to report a more compact visualization of the results to each algorithm is assigned a numerical identifier:
+In order to report a more compact visualization of the results to each algorithm is assigned a numerical identifier. Since the Threshold Optimizer algorithm always returns the same results these are not encoded in the graphics to show the differences.
 
 \begin{figure}[H]
     \centering
@@ -247,7 +247,6 @@ In order to report a more compact visualization of the results to each algorithm
         \hline
         EG & 4 \\
         \hline
-        TO & 5 \\
         \hline
     \end{tabular}
     \caption{Algorithm encoding}
