introduction fixed and changed

--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -9,7 +9,7 @@ The implications of bias and unfairness in AI extend beyond mere technological c
 
 To tackle these challenges, this work introduces the Fair-by-Design workflow, which extends the conventional machine learning workflow by explicitly incorporating fairness considerations from the inception of AI system design. This proactive approach aims to identify and mitigate bias throughout the development process, making fairness an integral aspect of the system's foundation.
 
-The objective of this study is not limited to comparing accuracy alone but extends to assessing the value of specific fairness metrics at the conclusion of the workflow. By contrasting these outcomes with a scenario where fairness assumptions are not considered, the goal is to provide a comprehensive evaluation of both accuracy and fairness within the proposed framework.
+The objective of this study is not limited to comparing accuracy alone but extends to assessing the value of specific fairness metrics at the conclusion of the workflow.
 
 The structure of this thesis unfolds as follows: \cref{chap:background} conducts a thorough review of existing approaches and methodologies designed to address bias and promote fairness in the development of AI systems. This chapter lays the groundwork upon which the innovative Fair-by-Design workflow is built. \cref{chap:contribution} delves into the intricacies of the workflow, elucidating the seamless integration of various fairness approaches into the design process. \cref{chap:validation} meticulously presents the results derived from the application of these fairness approaches, offering an empirical comparison of their performance and effectiveness. Finally, \cref{chap:conclusions} not only imparts insights gleaned from this research but also outlines prospective directions for further advancements in this critical and ever-evolving field.
 
